--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "css-loader": "^7.1.2",
+    "eslint": "^9.9.0",
+    "globals": "^15.9.0",
     "html-webpack-plugin": "^5.6.0",
+    "prettier": "3.3.3",
     "style-loader": "^4.0.0",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
